[package]
name = "knapsack"
version = "0.1.0"
authors = ["Etienne Batise <etienne.batise@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-rational = "0.3"
chrono = "0.4"


[lib]
name = "knapsack"
path = "src/lib.rs"

[[bin]]
name = "knapsack"
path = "src/main.rs"
